stripped seemingly erroneous use of parentheses in liquid

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 
   {% assign background_image_url = site.default_background_image_url %}
   {% if page.collection %}
-    {% assign collection = (site.collections | where:"label", page.collection | first) %}
+    {% assign collection = site.collections | where:"label", page.collection | first %}
     {% if collection.background_image_url %}
       {% assign background_image_url = collection.background_image_url %}
     {% endif %}
