--- a/_includes/porthole.html
+++ b/_includes/porthole.html
@@ -22,7 +22,7 @@ To include a portal within an html page, write
     background-size: cover;
     {% assign background_image_url = site.default_background_image_url %}
     {% if page.collection %}
-      {% assign collection = (site.collections | where:"label", page.collection | first) %}
+      {% assign collection = site.collections | where:"label", page.collection | first %}
       {% if collection.background_image_url %}
         {% assign background_image_url = collection.background_image_url %}
       {% endif %}
