--- a/_includes/collection_prev_next.html
+++ b/_includes/collection_prev_next.html
@@ -7,7 +7,7 @@
   --}}
 
 {% if page.collection %}
-  {% assign collections = (site.collections | sort: 'sequence') %}
+  {% assign collections = site.collections | sort: 'sequence' %}
   {% for collection in collections %}
     {% if collection.label == page.collection %}
       {% if collection.reverse_posts %}
@@ -16,18 +16,18 @@
     {% endif %}
   {% endfor %}
 
-  {% assign posts = (site[page.collection] | where:"layout", "post" | where: "categories","story" ) %}
+  {% assign posts = site[page.collection] | where:"layout", "post" | where: "categories","story"  %}
   {% if posts.size == 0 %}
-    {% assign posts = (site[page.collection] | where:"layout", "post" ) %}
+    {% assign posts = site[page.collection] | where:"layout", "post"  %}
   {% endif %}
 
   {% if posts.size > 1 %}
     {% if include.sort_by %}
-      {% assign posts = (posts | sort: include.sort_by ) %}
+      {% assign posts = posts | sort: include.sort_by  %}
     {% elsif posts.first.sequence %}
-      {% assign posts = (posts | sort: 'sequence' ) %}
+      {% assign posts = posts | sort: 'sequence'  %}
     {% else %}
-      {% assign posts = (posts | sort: 'date') %}
+      {% assign posts = posts | sort: 'date' %}
     {% endif %}
 
     {% if reverse_collection_posts %}
