--- a/_includes/head-twitter.html
+++ b/_includes/head-twitter.html
@@ -1,9 +1,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@{{ site.twitter_username }}" />
-<meta name="twitter:title" content="{{ page.title }}" />
-{% if page.context %}
-<meta name="twitter:description" content="{{ page.context | markdownify | strip_html }}" />
-{% endif %}
+<meta name="twitter:title" content="{{ page.title | default: site.title | escape | strip_html | normalize_whitespace | escape }}" />
+<meta name="twitter:description" content="{{ page.context | default: page.excerpt | default: site.description | markdownify | strip_html | normalize_whitespace | escape }}" />
 {% assign background_image_url = site.default_background_image_url %}
 {% if page.collection %}
   {% assign collection = site.collections | where:"label", page.collection | first %}
