refactoring credits and formatting at end of post

--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,5 +1,6 @@
 {% if page.related-posts %}
-    related: {% for related in page.related-posts %}
-<a href="{{ related[1] }}">{{ related[0] }}</a>
+    Related
+    <br>{% for related in page.related-posts %}
+<a href="{{ related[1] }}">{{ related[0] }}</a>{% unless forloop.last %}, {% endunless %}
     {% endfor %}
 {% endif %}
