--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -6,12 +6,14 @@ layout: default
 
 <article class="post">
 
-  <!-- <header class="post-header">
+  <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
     <blockquote class="site-collection-description">
       <p>{{ collection.description }}</p>
     </blockquote>
-  </header> -->
+    From <a href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+    {% include by-author.html %}
+  </header>
 
   <div class="post-content">
     {{ content }}
