--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -11,7 +11,7 @@ layout: default
     <blockquote class="site-collection-description">
       <p>{{ collection.description }}</p>
     </blockquote>
-    From <a href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+    From <a href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
     {% include by-author.html %}
   </header>
 
