--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,97 +5,8 @@
     <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
 
     {% include search.html %}
+    {% include contextual-nav.html %}
 
-    <nav class="site-nav">
-      <span class="menu-icon">
-        <svg viewBox="0 0 18 15" width="18px" height="15px">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </span>
-
-      <div class="trigger">
-        <!-- list main collections -->
-        {% assign collections = site.collections | sort: 'sequence' %}
-        {% for collection in collections %}
-          {% if collection.label == page.collection %}
-            {% assign prefix = "*&nbsp;" %}
-            {% if collection.reverse_posts %}
-              {% assign reverse_collection_posts = true %}
-            {% endif %}
-          {% else %}
-            {% assign prefix = "" %}
-          {% endif %}
-          {% if collection.title %}
-          <a class="page-link" href="{{ collection.label | relative_url }}">{{ prefix }}{{ collection.title | escape }}</a>
-          {% endif %}
-        {% endfor %}
-
-        <!-- list main site pages, e.g. 'about' -->
-        {% for my_page in site.pages %}
-          {% if my_page.title and my_page.layout == 'page' %}
-            {% if my_page.title == page.title %}
-              {% assign prefix = "*&nbsp;" %}
-            {% else %}
-              {% assign prefix = "" %}
-            {% endif %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ my_page.title | escape }}</a>
-          {% endif %}
-        {% endfor %}
-
-        {% if page.collection %}
-
-          <!-- list posts in collection -->
-          {% assign sorted_posts = site[page.collection] | where:"layout", "post" | sort: 'date' | sort: 'sequence' %}
-          {% if reverse_collection_posts %}
-            {% assign sorted_posts = sorted_posts | reverse %}
-          {% endif %}
-          {% if sorted_posts.size > 0 %}
-            <hr/>
-            {% for my_post in sorted_posts %}
-              {% if my_post.title == page.title %}
-                {% assign prefix = "*&nbsp;" %}
-              {% else %}
-                {% assign prefix = "" %}
-              {% endif %}
-              <a class="page-link" href="{{ my_post.url | relative_url }}">{{ prefix }}{{ my_post.title | escape }}</a>
-            {% endfor %}
-          {% endif %}
-
-          <!-- list pages in collection -->
-          {% assign sorted_pages = site[page.collection] | where:"layout", 'page' | sort: 'date' | sort: 'sequence' %}
-          {% if sorted_pages.size > 0 %}
-            <hr/>
-            {% for my_page in sorted_pages %}
-              {% if my_page.title == page.title %}
-                {% assign prefix = "*&nbsp;" %}
-              {% else %}
-                {% assign prefix = "" %}
-              {% endif %}
-              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ my_page.title | escape }}</a>
-            {% endfor %}
-          {% endif %}
-
-          <!-- list auto-generated page in collection -->
-          {% assign sorted_pages = site[page.collection] | where:"layout", 'auto-generated' | sort: 'date' | sort: 'sequence' %}
-          {% if sorted_pages.size > 0 %}
-            <hr/>
-            {% for my_page in sorted_pages %}
-              {% if my_page.title == page.title %}
-                {% assign prefix = "*&nbsp;" %}
-              {% else %}
-                {% assign prefix = "" %}
-              {% endif %}
-              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ site.auto-generated-title | escape }}</a>
-            {% endfor %}
-          {% endif %}
-
-        {% endif %}
-
-        <div class="page-link">  </div>
-      </div>
-    </nav>
   </div>
   <blockquote class="site-collection-description">
     <p>{{ site.description }}</p>
