fixed clumsy wrap of author on narrow displays

--- a/_includes/by-author.html
+++ b/_includes/by-author.html
@@ -4,9 +4,11 @@
   {% assign author = site.author %}
 {% endif %}
 {% if author %}
+<span class ="nowrap">
 by <a class="page-link" href="{{ '/about/' | relative_url }}">
   <span itemprop="author" itemscope itemtype="http://schema.org/Person">
     <span itemprop="name">{{ author }}</span>
   </span>
 </a>
+</span>
 {% endif %}
