cascading credits, where page replaces collection replaces site

--- a/_includes/contextual-nav.html
+++ b/_includes/contextual-nav.html
@@ -85,6 +85,20 @@
 
     {% endif %}
 
+    {% assign background_image_url = site.default_background_image_url %}
+    {% if page.collection %}
+      {% assign collection = site.collections | where:"label", page.collection | first %}
+      {% if collection.background_image_url %}
+        {% assign background_image_url = collection.background_image_url %}
+      {% endif %}
+    {% endif %}
+    {% if page.background_image_url %}
+      {% assign background_image_url = page.background_image_url %}
+    {% endif %}
+    {% if background_image_url %}
+      <a class="page-link" href="{{ background_image_url | relative_url }}">background image</a>
+    {% endif %}
+
     <div class="page-link">  </div>
   </div>
 </nav>
