--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,4 +19,7 @@ layout: default
     {{ content }}
   </div>
 
+  <div style="text-align:center;">
+    {% include credits.html %}
+  </div>
 </article>
