--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,4 +4,7 @@ layout: default
 
 <div class="home">
   {{ content }}
+  <div style="text-align:center;">
+    {% include credits.html %}
+  </div>
 </div>
