fix broken /about/ references

--- a/_includes/by-author.html
+++ b/_includes/by-author.html
@@ -5,7 +5,7 @@
 {% endif %}
 {% if author %}
 <span class ="nowrap">
-by <a class="page-link" href="{{ '/about/' | relative_url }}">
+by <a class="page-link" href="{{ '/about' | relative_url }}">
   <span itemprop="author" itemscope itemtype="http://schema.org/Person">
     <span itemprop="name">{{ author }}</span>
   </span>
