added a new collection for haiku

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -36,5 +36,9 @@ $on-laptop:        800px;
 //     }
 // }
 
+.twitter-tweet {
+  margin: 10px auto;
+}
+
 // Import partials from the `minima` theme.
 @import "minima";
