--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,8 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: antiquewhite;
+// $background-color: antiquewhite;
+$background-color: white;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
