--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
+        {% include top-nav.html %}
+
         {{ content }}
       </div>
     </main>
