--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -8,11 +8,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
-    <blockquote class="site-collection-description">
-      <p>{{ collection.description }}</p>
-    </blockquote>
-    From <a href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
-    {% include by-author.html %}
+    <p class="site-collection-description"> - {{ collection.description }}</p>
   </header>
 
   <div class="post-content">
