--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -51,10 +51,11 @@
 .site-collection-description {
   clear: both;
   font-style: italic;
+  margin-left: 10px
 }
 
 .site-nav {
-  float: right;
+  // float: right;
   line-height: 56px;
 
   .menu-icon {
@@ -72,9 +73,9 @@
   }
 
   // @include media-query($on-palm) {
-    position: absolute;
-    top: 9px;
-    right: $spacing-unit / 2;
+    // position: absolute;
+    // top: 9px;
+    // right: $spacing-unit / 2;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
@@ -114,6 +115,41 @@
       margin-left: 20px;
     }
   //}
+}
+
+.top-nav {
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  line-height: normal;
+
+  .site-link {
+    font-size: x-large;
+    white-space: nowrap;
+  }
+
+  .no-wrap {
+    white-space: nowrap;
+  }
+
+  .nav-collection-divider {
+    font-size: small;
+  }
+
+  // .top-nav-side-by-side {
+  //   display: table;
+  //   clear: both;
+  // }
+  //
+  // .top-nav-collections {
+  //   float: left;
+  //   width: 80%;
+  // }
+  //
+  // .top-nav-hamburger {
+  //   float: left;
+  //   width: 20%;
+  // }
 }
 
 
@@ -225,6 +261,7 @@
  */
 .post-header {
   margin-bottom: $spacing-unit;
+  text-align: center;
 }
 
 .post-title {
