--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,11 +5,15 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
-    {% assign collection = site.collections | where:"label", page.collection | first %}
-    {% if collection %}
-    From <a href=".">{{ collection.title }}</a>
+    {% if page.title != "About" %}
+      {% assign collection = site.collections | where:"label", page.collection | first %}
+      {% if collection %}
+        From <a href=".">{{ collection.title }}</a>
+      {% else %}
+        <a href="/">{{ site.title }}</a>
+      {% endif %}
     {% else %}
-    <a href="/">{{ site.title }}</a>
+      <a href="/">{{ site.title }}</a>
     {% endif %}
 
     {% include by-author.html %}
