added portholes to top-nav.  May be a daft decision

--- a/_includes/top-nav.html
+++ b/_includes/top-nav.html
@@ -1,6 +1,7 @@
+<p class="porthole" style="height:20px;"/>
 <nav class="top-nav">
-  <hr class="top-nav-hr">
-  <br>
+  <!-- <hr class="top-nav-hr"> -->
+  <!-- <br> -->
   <span class="top-nav-collections">
     <a href="/"><span class="site-link">{{ site.title | escape }}</class></a>
     <span class="top-nav-sections">
@@ -13,6 +14,7 @@
       &nbsp;|&nbsp;&nbsp;<a class="page-link" href="/about">about</a>
     </span>
   </span>
-  <br><br>
-  <hr class="top-nav-hr">
+  <!-- <br> -->
+  <!-- <hr class="top-nav-hr"> -->
 </nav>
+<p class="porthole" style="height:20px;"/>
