--- a/_includes/porthole.html
+++ b/_includes/porthole.html
@@ -14,6 +14,7 @@ To include a portal within an html page, write
 -->
 <style>
   .porthole {
+    float: none;
     width: 100%;
     height: 100px;
     background-attachment: fixed;
