added explan link for in the style of

--- a/_includes/story_details.html
+++ b/_includes/story_details.html
@@ -30,7 +30,7 @@
         {% else %}
           {% assign prefix = "" %}
         {% endif %}
-        <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ site.auto-generated-title | escape }}</a>
+        <a class="page-link" href="{{ my_page.url | relative_url }}">{{ prefix }}{{ site.auto-generated-title | escape }}</a> (... <a href="/jekyll_notes/2017-04-14-ngrams-and-markov-chains-in-jekyll.html">er, what?</a>)
       {% endfor %}
     {% endif %}
 
