refactored into related-notes-and-terms, added awkward-alcove

--- a/_includes/collection_prev_next.html
+++ b/_includes/collection_prev_next.html
@@ -30,7 +30,7 @@
       {% assign posts = posts | sort: 'date' %}
     {% endif %}
 
-    {% if reverse_collection_posts %}
+    {% if reverse_collection_posts == true %}
       {% assign posts = posts | reverse %}
     {% endif %}
 
